--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "pg": "^8.13.1",
+    "react-router-dom": "^6.27.0",
     "socket.io": "^4.8.0"
   }
 }
