--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socketio-jwt": "^4.6.2"
   }
 }
